--- a/asset/style.css
+++ b/asset/style.css
@@ -14,6 +14,11 @@ header{
     padding:0;
     margin: 0 0 5rem 0;
 }
+
+h1{
+    font-weight: normal;
+    font-size: 2rem;
+}
 body,html{
     margin:0;
     padding: 0;
@@ -24,6 +29,7 @@ fieldset{
     margin:auto;
     width:20rem;
     height: 15rem;
+    font-size: 1.0875rem;
 }
 form{
     display: flex;
